--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,7 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 104.18.19.191
+    server: cfcdn1.sanfencdn9.com
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -21,24 +21,9 @@ proxies:
       headers:
         host: helanv6cf.inekokkk.top
   - &id002
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: fcdn.flha.ru
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fcdn.flha.ru
-  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 104.19.250.15
+    server: 104.18.19.191
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -50,7 +35,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id004
+  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
     server: 104.18.36.119
@@ -65,37 +50,22 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: fcdn.flha.ru
+    port: 2095
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fcdn.flha.ru
   - &id005
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 172.67.214.33
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fcdn.flha.ru
-  - &id006
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 104.21.23.231
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fcdn.flha.ru
-  - &id007
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_1
     type: vmess
     server: 104.21.82.39
@@ -110,21 +80,51 @@ proxies:
       path: /
       headers:
         host: tu.mahilu.site
-  - &id008
-    name: 🇺🇸_US_美国_3
+  - &id006
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
     type: vmess
-    server: cfcdn1.sanfencdn9.com
+    server: 104.19.250.15
     port: 2052
     cipher: auto
-    uuid: a595e9ba-b641-480f-8597-323612357ba5
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /video/GQ2qE5Us9g
+      path: /
       headers:
-        host: tw1bQiWSE4x.fzbqfrse.xyz
+        host: helanv6cf.inekokkk.top
+  - &id007
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.21.23.231
+    port: 2095
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fcdn.flha.ru
+  - &id008
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.214.33
+    port: 2095
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fcdn.flha.ru
   - &id009
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_2
     type: vmess
@@ -141,48 +141,7 @@ proxies:
       headers:
         host: tu.mahilu.site
   - &id010
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.19.58.60
-    port: 8080
-    cipher: auto
-    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
-      headers:
-        host: concentrations-taxi-about-recognised.trycloudflare.com
-  - &id011
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id012
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id013
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
     server: 104.21.8.157
     port: 2082
@@ -196,120 +155,29 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id014
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - &id011
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
-    server: yh7.dtku41.xyz
+    server: 104.20.26.40
     port: 8080
     cipher: auto
-    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
       headers:
-        host: booty-pensions-scheduling-blogging.trycloudflare.com
-  - &id015
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_3
-    type: vmess
-    server: 172.67.152.170
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tu.mahilu.site
-  - &id016
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: us219.netfilx.live
-    port: 80
-    cipher: auto
-    uuid: 1e65ec6d-9a42-4cd0-8c51-63030970134f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us219.netfilx.live
-  - &id017
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 95.164.38.6
-    port: 80
-    cipher: auto
-    uuid: 8b86eebb-4332-46ea-aa70-8a821dc8272f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: no1.xv2ray.net
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: 112.16.228.104
+        host: fantastic-doe-bids-ended.trycloudflare.com
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 205.134.180.145
     port: 443
-    udp: true
-    password: BZjkHMao
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 52.56.210.0
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇩🇪_DE_德国
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id021
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 167.88.61.175
-    port: 5600
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id022
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 167.88.61.175
-    port: 5000
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id023
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 109.107.181.130
-    port: 30127
-    cipher: auto
-    uuid: 891494ae-5bcd-44bc-dbf4-c7132a909930
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id024
+    password: hgLCgfLRgB6d
+    cipher: chacha20-ietf-poly1305
+  - &id013
     name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
     type: vmess
     server: 162.159.58.74
@@ -324,6 +192,89 @@ proxies:
       path: /TG@dns68免费节点
       headers:
         host: tg.dns68.9669.link
+  - &id014
+    name: 🇱🇺_LU_卢森堡
+    type: vmess
+    server: 45.82.31.164
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id015
+    name: 🇩🇪_DE_德意志联邦共和国
+    type: vmess
+    server: 23.158.56.229
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id016
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 158.51.123.111
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id017
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 141.101.122.250
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: fantastic-doe-bids-ended.trycloudflare.com
+  - &id018
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: 23.142.200.175
+    port: 443
+    udp: true
+    password: 27876_t7d7f4e3f
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 156.146.38.163
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id020
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_3
+    type: vmess
+    server: 172.67.152.170
+    port: 2095
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tu.mahilu.site
 proxy-groups:
   - name: PROXY
     type: select
@@ -370,10 +321,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -399,10 +346,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
   - name: SELECT
     type: select
     proxies:
@@ -426,10 +369,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
